--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="overflow-y:scroll;">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type">
 	<title>dialog -- 模态对话框 alert(), confirm(), prompt()</title>
@@ -7,7 +7,7 @@
 	<script src="jquery-1.8.3.min.js"></script>
 	<script src="dialog.js"></script>
 </head>
-<body>
+<body style="height:2000px;padding:1000px;">
 	<button onclick="app.dialog.alert(0);">alert</button>
 	<button onclick="" class="confirm">confirm</button>
 	<button class="prompt">prompt</button>
