--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		$('.confirm').bind({
 			'click': function() {
 				app.dialog.confirm('确定取消？', function() {
-					console.log(1);
+					console.log('点击了确定');
 				}, function() {
-					console.log(0);
+					console.log('点击了取消');
 				});
 			}
 		});
